Interpreter/Antlr/MipsAsmParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from MipsToBinary/MipsAsm.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
// [System.CLSCompliant(false)]
public partial class MipsAsmParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, WS=48, NEWLINE=49, COMMENT=50, NUM=51, HEX_NUM=52, 
		ALPHA=53, IMM_REG=54, S_REG=55, T_REG=56, V_REG=57, A_REG=58, K_REG=59;
	public const int
		RULE_prog = 0, RULE_iden = 1, RULE_label = 2, RULE_reg = 3, RULE_usigned_imm = 4, 
		RULE_signed_imm = 5, RULE_stat = 6, RULE_op_add = 7, RULE_op_addu = 8, 
		RULE_op_sub = 9, RULE_op_and = 10, RULE_op_or = 11, RULE_op_nor = 12, 
		RULE_op_xor = 13, RULE_op_nand = 14, RULE_op_slt = 15, RULE_op_sltu = 16, 
		RULE_op_sll = 17, RULE_op_srl = 18, RULE_op_sra = 19, RULE_op_jr = 20, 
		RULE_instr_r = 21, RULE_op_addi = 22, RULE_op_addiu = 23, RULE_op_lw = 24, 
		RULE_op_lh = 25, RULE_op_lhu = 26, RULE_op_lb = 27, RULE_op_lbu = 28, 
		RULE_op_sw = 29, RULE_op_sh = 30, RULE_op_sb = 31, RULE_op_lui = 32, RULE_op_andi = 33, 
		RULE_op_ori = 34, RULE_op_nori = 35, RULE_op_slti = 36, RULE_op_beq = 37, 
		RULE_op_bne = 38, RULE_op_bgtz = 39, RULE_instr_i = 40, RULE_op_j = 41, 
		RULE_op_jal = 42, RULE_instr_j = 43, RULE_op_halt = 44, RULE_instr = 45, 
		RULE_instr_pseudo = 46, RULE_op_bgt = 47, RULE_op_move = 48;
	public static readonly string[] ruleNames = {
		"prog", "iden", "label", "reg", "usigned_imm", "signed_imm", "stat", "op_add", 
		"op_addu", "op_sub", "op_and", "op_or", "op_nor", "op_xor", "op_nand", 
		"op_slt", "op_sltu", "op_sll", "op_srl", "op_sra", "op_jr", "instr_r", 
		"op_addi", "op_addiu", "op_lw", "op_lh", "op_lhu", "op_lb", "op_lbu", 
		"op_sw", "op_sh", "op_sb", "op_lui", "op_andi", "op_ori", "op_nori", "op_slti", 
		"op_beq", "op_bne", "op_bgtz", "instr_i", "op_j", "op_jal", "instr_j", 
		"op_halt", "instr", "instr_pseudo", "op_bgt", "op_move"
	};

	private static readonly string[] _LiteralNames = {
		null, "'_'", "':'", "'$zero'", "'$sp'", "'$fp'", "'$ra'", "'-'", "'add'", 
		"','", "'addu'", "'sub'", "'and'", "'or'", "'nor'", "'xor'", "'nand'", 
		"'slt'", "'sltu'", "'sll'", "'srl'", "'sra'", "'jr'", "'addi'", "'addiu'", 
		"'lw'", "'('", "')'", "'lh'", "'lhu'", "'lb'", "'lbu'", "'sw'", "'sh'", 
		"'sb'", "'lui'", "'andi'", "'ori'", "'nori'", "'slti'", "'beq'", "'bne'", 
		"'bgtz'", "'j'", "'jal'", "'halt'", "'bgt'", "'move'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"WS", "NEWLINE", "COMMENT", "NUM", "HEX_NUM", "ALPHA", "IMM_REG", "S_REG", 
		"T_REG", "V_REG", "A_REG", "K_REG"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MipsAsm.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static MipsAsmParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public MipsAsmParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public MipsAsmParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgContext : ParserRuleContext {
		public StatContext[] stat() {
			return GetRuleContexts<StatContext>();
		}
		public StatContext stat(int i) {
			return GetRuleContext<StatContext>(i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prog; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMipsAsmListener typedListener = listener as IMipsAsmListener;
			if (typedListener != null) typedListener.EnterProg(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMipsAsmListener typedListener = listener as IMipsAsmListener;
			if (typedListener != null) typedListener.ExitProg(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMipsAsmVisitor<TResult> typedVisitor = visitor as IMipsAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgContext prog() {
		ProgContext _localctx = new ProgContext(Context, State);
		EnterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 98; stat();
				}
				}
				State = 101;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__7) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__40) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << NEWLINE) | (1L << COMMENT) | (1L << NUM) | (1L << ALPHA))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IdenContext : ParserRuleContext {
		public ITerminalNode ALPHA() { return GetToken(MipsAsmParser.ALPHA, 0); }
		public ITerminalNode NUM() { return GetToken(MipsAsmParser.NUM, 0); }
		public IdenContext iden() {
			return GetRuleContext<IdenContext>(0);
		}
		public IdenContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_iden; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMipsAsmListener typedListener = listener as IMipsAsmListener;
			if (typedListener != null) typedListener.EnterIden(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMipsAsmListener typedListener = listener as IMipsAsmListener;
			if (typedListener != null) typedListener.ExitIden(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMipsAsmVisitor<TResult> typedVisitor = visitor as IMipsAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIden(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IdenContext iden() {
		IdenContext _localctx = new IdenContext(Context, State);
		EnterRule(_localctx, 2, RULE_iden);
		try {
			State = 111;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 103; Match(ALPHA);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 104; Match(NUM);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 105; Match(ALPHA);
				State = 106; iden();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 107; Match(NUM);
				State = 108; iden();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 109; Match(T__0);
				State = 110; iden();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LabelContext : ParserRuleContext {
		public IdenContext iden() {
			return GetRuleContext<IdenContext>(0);
		}
		public LabelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_label; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMipsAsmListener typedListener = listener as IMipsAsmListener;
			if (typedListener != null) typedListener.EnterLabel(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMipsAsmListener typedListener = listener as IMipsAsmListener;
			if (typedListener != null) typedListener.ExitLabel(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMipsAsmVisitor<TResult> typedVisitor = visitor as IMipsAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLabel(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LabelContext label() {
		LabelContext _localctx = new LabelContext(Context, State);
		EnterRule(_localctx, 4, RULE_label);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 113; iden();
			State = 114; Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RegContext : ParserRuleContext {
		public ITerminalNode S_REG() { return GetToken(MipsAsmParser.S_REG, 0); }
		public ITerminalNode T_REG() { return GetToken(MipsAsmParser.T_REG, 0); }
		public ITerminalNode A_REG() { return GetToken(MipsAsmParser.A_REG, 0); }
		public ITerminalNode V_REG() { return GetToken(MipsAsmParser.V_REG, 0); }
		public ITerminalNode K_REG() { return GetToken(MipsAsmParser.K_REG, 0); }
		public ITerminalNode IMM_REG() { return GetToken(MipsAsmParser.IMM_REG, 0); }
		public RegContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_reg; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMipsAsmListener typedListener = listener as IMipsAsmListener;
			if (typedListener != null) typedListener.EnterReg(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMipsAsmListener typedListener = listener as IMipsAsmListener;
			if (typedListener != null) typedListener.ExitReg(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMipsAsmVisitor<TResult> typedVisitor = visitor as IMipsAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RegContext reg() {
		RegContext _localctx = new RegContext(Context, State);
		EnterRule(_localctx, 6, RULE_reg);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 116;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << IMM_REG) | (1L << S_REG) | (1L << T_REG) | (1L << V_REG) | (1L << A_REG) | (1L << K_REG))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Usigned_immContext : ParserRuleContext {
		public ITerminalNode NUM() { return GetToken(MipsAsmParser.NUM, 0); }
		public ITerminalNode HEX_NUM() { return GetToken(MipsAsmParser.HEX_NUM, 0); }
		public Usigned_immContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_usigned_imm; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMipsAsmListener typedListener = listener as IMipsAsmListener;
			if (typedListener != null) typedListener.EnterUsigned_imm(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMipsAsmListener typedListener = listener as IMipsAsmListener;
			if (typedListener != null) typedListener.ExitUsigned_imm(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMipsAsmVisitor<TResult> typedVisitor = visitor as IMipsAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUsigned_imm(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Usigned_immContext usigned_imm() {
		Usigned_immContext _localctx = new Usigned_immContext(Context, State);
		EnterRule(_localctx, 8, RULE_usigned_imm);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 118;
			_la = TokenStream.LA(1);
			if ( !(_la==NUM || _la==HEX_NUM) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Signed_immContext : ParserRuleContext {
		public Usigned_immContext usigned_imm() {
			return GetRuleContext<Usigned_immContext>(0);
		}
		public Signed_immContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_signed_imm; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMipsAsmListener typedListener = listener as IMipsAsmListener;
			if (typedListener != null) typedListener.EnterSigned_imm(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMipsAsmListener typedListener = listener as IMipsAsmListener;
			if (typedListener != null) typedListener.ExitSigned_imm(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMipsAsmVisitor<TResult> typedVisitor = visitor as IMipsAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSigned_imm(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Signed_immContext signed_imm() {
		Signed_immContext _localctx = new Signed_immContext(Context, State);
		EnterRule(_localctx, 10, RULE_signed_imm);
		try {
			State = 123;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__6:
				EnterOuterAlt(_localctx, 1);
				{
				State = 120; Match(T__6);
				State = 121; usigned_imm();
				}
				break;
			case NUM:
			case HEX_NUM:
				EnterOuterAlt(_localctx, 2);
				{
				State = 122; usigned_imm();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatContext : ParserRuleContext {
		public InstrContext instr() {
			return GetRuleContext<InstrContext>(0);
		}
		public ITerminalNode NEWLINE() { return GetToken(MipsAsmParser.NEWLINE, 0); }
		public LabelContext label() {
			return GetRuleContext<LabelContext>(0);
		}
		public ITerminalNode COMMENT() { return GetToken(MipsAsmParser.COMMENT, 0); }
		public StatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stat; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMipsAsmListener typedListener = listener as IMipsAsmListener;
			if (typedListener != null) typedListener.EnterStat(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMipsAsmListener typedListener = listener as IMipsAsmListener;
			if (typedListener != null) typedListener.ExitStat(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMipsAsmVisitor<TResult> typedVisitor = visitor as IMipsAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatContext stat() {
		StatContext _localctx = new StatContext(Context, State);
		EnterRule(_localctx, 12, RULE_stat);
		try {
			State = 138;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 125; instr(0);
				State = 126; Match(NEWLINE);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 128; instr(0);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 129; label();
				State = 130; instr(0);
				State = 131; Match(NEWLINE);
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 133; label();
				State = 134; instr(0);
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 136; Match(NEWLINE);
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 137; Match(COMMENT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Op_addContext : ParserRuleContext {
		public RegContext rd;
		public RegContext rs;
		public RegContext rt;
		public RegContext[] reg() {
			return GetRuleContexts<RegContext>();
		}
		public RegContext reg(int i) {
			return GetRuleContext<RegContext>(i);
		}
		public Op_addContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_op_add; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMipsAsmListener typedListener = listener as IMipsAsmListener;
			if (typedListener != null) typedListener.EnterOp_add(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMipsAsmListener typedListener = listener as IMipsAsmListener;
			if (typedListener != null) typedListener.ExitOp_add(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMipsAsmVisitor<TResult> typedVisitor = visitor as IMipsAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOp_add(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Op_addContext op_add() {
		Op_addContext _localctx = new Op_addContext(Context, State);
		EnterRule(_localctx, 14, RULE_op_add);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 140; Match(T__7);
			State = 141; _localctx.rd = reg();
			State = 142; Match(T__8);
			State = 143; _localctx.rs = reg();
			State = 144; Match(T__8);
			State = 145; _localctx.rt = reg();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Op_adduContext : ParserRuleContext {
		public RegContext rd;
		public RegContext rs;
		public RegContext rt;
		public RegContext[] reg() {
			return GetRuleContexts<RegContext>();
		}
		public RegContext reg(int i) {
			return GetRuleContext<RegContext>(i);
		}
		public Op_adduContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_op_addu; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMipsAsmListener typedListener = listener as IMipsAsmListener;
			if (typedListener != null) typedListener.EnterOp_addu(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMipsAsmListener typedListener = listener as IMipsAsmListener;
			if (typedListener != null) typedListener.ExitOp_addu(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMipsAsmVisitor<TResult> typedVisitor = visitor as IMipsAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOp_addu(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Op_adduContext op_addu() {
		Op_adduContext _localctx = new Op_adduContext(Context, State);
		EnterRule(_localctx, 16, RULE_op_addu);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 147; Match(T__9);
			State = 148; _localctx.rd = reg();
			State = 149; Match(T__8);
			State = 150; _localctx.rs = reg();
			State = 151; Match(T__8);
			State = 152; _localctx.rt = reg();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Op_subContext : ParserRuleContext {
		public RegContext rd;
		public RegContext rs;
		public RegContext rt;
		public RegContext[] reg() {
			return GetRuleContexts<RegContext>();
		}
		public RegContext reg(int i) {
			return GetRuleContext<RegContext>(i);
		}
		public Op_subContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_op_sub; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMipsAsmListener typedListener = listener as IMipsAsmListener;
			if (typedListener != null) typedListener.EnterOp_sub(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMipsAsmListener typedListener = listener as IMipsAsmListener;
			if (typedListener != null) typedListener.ExitOp_sub(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMipsAsmVisitor<TResult> typedVisitor = visitor as IMipsAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOp_sub(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Op_subContext op_sub() {
		Op_subContext _localctx = new Op_subContext(Context, State);
		EnterRule(_localctx, 18, RULE_op_sub);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 154; Match(T__10);
			State = 155; _localctx.rd = reg();
			State = 156; Match(T__8);
			State = 157; _localctx.rs = reg();
			State = 158; Match(T__8);
			State = 159; _localctx.rt = reg();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Op_andContext : ParserRuleContext {
		public RegContext rd;
		public RegContext rs;
		public RegContext rt;
		public RegContext[] reg() {
			return GetRuleContexts<RegContext>();
		}
		public RegContext reg(int i) {
			return GetRuleContext<RegContext>(i);
		}
		public Op_andContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_op_and; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMipsAsmListener typedListener = listener as IMipsAsmListener;
			if (typedListener != null) typedListener.EnterOp_and(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMipsAsmListener typedListener = listener as IMipsAsmListener;
			if (typedListener != null) typedListener.ExitOp_and(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMipsAsmVisitor<TResult> typedVisitor = visitor as IMipsAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOp_and(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Op_andContext op_and() {
		Op_andContext _localctx = new Op_andContext(Context, State);
		EnterRule(_localctx, 20, RULE_op_and);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 161; Match(T__11);
			State = 162; _localctx.rd = reg();
			State = 163; Match(T__8);
			State = 164; _localctx.rs = reg();
			State = 165; Match(T__8);
			State = 166; _localctx.rt = reg();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
